hphp/hack/test/typecheck/nonnull/option_is_not_subtype_of_nonnull1.php.exp
File "option_is_not_subtype_of_nonnull1.php", line 8, characters 10-16:
Invalid return type (Typing[4110])
File "option_is_not_subtype_of_nonnull1.php", line 7, characters 18-24:
Expected nonnull
File "option_is_not_subtype_of_nonnull1.php", line 3, characters 22-23:
But got ?[unresolved]
