hphp/hack/test/typecheck/nonnull/option_is_not_subtype_of_nonnull1.php
<?hh

function null_<T>(): ?T {
  return null;
}

function test(): nonnull {
  return null_();
}
